[metadata]
name = meand23
version = 0.0.2
author = andyh2
author_email = andyh2@mac.com
description = 23andme API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/andyh2/meand23
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    requests

[options.packages.find]
where = src
